--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <!-- configuration du plugin exec-maven-plugin  -->            
         <!-- On pourra exécuter le programme avec : 'mvn package exec:java' -->            
         <exec.mainClass>exemple.ExempleDUtilisation</exec.mainClass>       
     </properties>
 
     <dependencies>
-        <!-- On configure la dépendance sur la classe "Bandeau"  -->                    
+        <!-- On configure la dépendance sur la classe "Bandeau".  -->
         <dependency>
             <groupId>io.github.bastide</groupId>
             <artifactId>bandeau</artifactId>
-            <version>1.1</version>
+            <version>1.3</version>
         </dependency>
     </dependencies>
     <build>
