--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
                 <version>3.1.2</version>
                 <executions>
                     <execution>
+                        <?m2e execute onConfiguration?>
                         <goals>
                             <goal>sources</goal>
                             <goal>resolve</goal>
